# MHSNEvents

./: .1rsw6ynynwjph2384208074~  .38gf2v8kdokiy2656091721~  .gitignore  README.md  classStructure.py  deleteAdvertisement.py  deleteEvent.py  functions.py  helper.py  home.py  htmlfile.html  main.py  previousRun.html  pyproject.toml  uploadAdvertisement.py  uploadEvent.py
Headspace/: BRAINSTORM.txt  FIX.txt  NOTES.txt  plan.draw
infoUpload/: classStructure.py  deleteEvent.py  functions.py  home.py  main2.py  plan.txt  uploadEvent.py
static/css/: main.css
templates/: MHSN.html
