[tool.poetry]
name = "MHSNEvent"
version = "0.1.0"
description = ""
authors = ["Matthew Tujague <mjt58@njit.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "4.9.2"
bs4 = "^0.0.1"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
replit = "^3.2.5"
Pillow = "^9.4.0"
emoji = "2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
